--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/date-fns": "^2.5.3",
     "@vercel/blob": "^2.0.1",
     "@vercel/functions": "^3.4.0",
     "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
@@ -22,13 +24,14 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "replicate": "^1.4.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
