feat: add email notifications, analytics, and bulk seo pages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
     "@types/date-fns": "^2.5.3",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.1",
     "@vercel/functions": "^3.4.0",
     "@vercel/postgres": "^0.10.0",
@@ -24,6 +27,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "replicate": "^1.4.0",
+    "resend": "^6.9.1",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
